tdf#92145: Writer table rows/columns can't be resized

with disabled rulers. (This fix was suggested by Tomaž Vajngerl.)

(Cherry-picked from the commit ed031895f6f5b361cccc6811b53c6f2b9cfc3e23)

Conflicts:
	svtools/source/control/ruler.cxx

Change-Id: I161237cdb4941c0eaf934223b078acd94d72e21d
Reviewed-on: https://gerrit.libreoffice.org/18507
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>