svtools/source/control/ruler.cxx
@@ -2344,6 +2344,12 @@ bool Ruler::StartDocDrag( const MouseEvent& rMEvt, RulerType eDragType )
         // update ruler
         if ( mbFormat )
         {
+            if (!IsReallyVisible())
+            {
+                // set mpData for ImplDocHitTest()
+                ImplFormat(*this);
+            }
+
             Invalidate(INVALIDATE_NOERASE);
         }
 
